crates/doodle-core/tests/snapshots/broken_syntax__01_missing_end.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `end` to close this `to`
  --> 01-missing-end.doodle:1:1
1 | to greet()
  | ^^
